fix: add .env in .gitignore

--- a/.envExample
+++ b/.envExample
@@ -1,5 +1,5 @@
 DATABASE_HOST=postgres
 DATABASE=hackaton
 DATABASE_PORT=5432
-DATABASE_USERNAME=hackaton
+DATABASE_USER=hackaton
 DATABASE_PASSWORD=hackaton
