fix(ingress): increase proxy-body-size to 50m to allow larger requests

--- a/k8s/hackaton.yaml
+++ b/k8s/hackaton.yaml
@@ -103,8 +103,9 @@ metadata:
   labels:
     app: hackaton-ingress
   annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
-#    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
