--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,17 @@ spring:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 logging:
   level:
@@ -40,3 +51,8 @@ server:
   tomcat:
     threads:
       max: 20
+
+jwt:
+  secret: SEFDS0FUT05fMjAyNV9TRU5IQV9HUk9VUF8xN19GSUFQWAo=
+  expiration:
+    ms: 86400000
