--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -8,3 +8,4 @@ type: Opaque
 data:
   DATABASE_USER: aGFja2F0b24=
   DATABASE_PASSWORD: aGFja2F0b24=
+  EMAIL_PASSWORD: dHdoZyB4aWdnIHVwYXAgcmNueQ==
