--- a/k8s/hackaton.yaml
+++ b/k8s/hackaton.yaml
@@ -45,6 +45,16 @@ spec:
                 secretKeyRef:
                   name: hackaton-secret
                   key: DATABASE_PASSWORD
+            - name: EMAIL_USERNAME
+              valueFrom:
+                configMapKeyRef:
+                  name: hackaton-config
+                  key: EMAIL_USERNAME
+            - name: EMAIL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: hackaton-secret
+                  key: EMAIL_PASSWORD
           resources:
             requests:
               memory: "512Mi"
@@ -103,8 +113,9 @@ metadata:
   labels:
     app: hackaton-ingress
   annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
-#    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
