--- a/k8s/config.yaml
+++ b/k8s/config.yaml
@@ -8,4 +8,4 @@ data:
   DATABASE_HOST: "postgres-service"
   DATABASE: "hackaton"
   DATABASE_PORT: "5432"
-  EMAIL_USERNAME: "nathancribeiro2018@gmail.com"
+  EMAIL_USERNAME: ""
