feat: enhance email notifications and refine SonarQube coverage settings

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,14 +32,17 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${EMAIL_USERNAME}
-    password: ${EMAIL_PASSWORD}
+    username: ${EMAIL_USERNAME:fiapxgrupo17hackaton@gmail.com}
+    password: ${EMAIL_PASSWORD:fuzv lolj ymlt xtjb}
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
