add missing env variables

--- a/k8s/config-secret.yml
+++ b/k8s/config-secret.yml
@@ -15,3 +15,8 @@ type: Opaque
 data:
   DATABASE_USER: "aGFja2F0b24="  # Base64 encoded "hackaton"
   DATABASE_PASSWORD: "VGVzdGUxMjM="  # Base64 encoded "Teste123"
+  EMAIL_USERNAME: "fiapxgrupo17hackaton@gmail.com"
+  EMAIL_PASSWORD: 'fuzv lolj ymlt xtjb'
+  SERVER_PORT: 8080
+  KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+  JWT_SECRET: bXktc3VwZXItc2VjdXJlLWp3dC1rZXktdGhhdC1pcy12ZXJ5LWxvbmctYW5kLXNlY3VyZS1mb3ItcHJvZHVjdGlvbi1hbmQtbXVzdC1iZS1hdC1sZWFzdC0yNTYtYml0cy1mb3ItaG1hYy1zaGEtYWxnb3JpdGhtcw==
