--- a/k8s/config-secret.yml
+++ b/k8s/config-secret.yml
@@ -10,7 +10,9 @@ data:
   EMAIL_PASSWORD: "fuzv lolj ymlt xtjb"
   SERVER_PORT: "8080"
   KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
-
+  REDIS_HOST: "redis"
+  REDIS_PORT: "6379"
+  REDIS_PASSWORD: ""
 ---
 apiVersion: v1
 kind: Secret
