--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -112,3 +112,25 @@ springdoc:
   default-produces-media-type: application/json
   packages-to-scan: hackaton.fiapx.adapters.controllers
   paths-to-match: /api/**
+
+# Actuator configuration for Prometheus metrics
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: always
+    prometheus:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+    tags:
+      application: hackaton
