--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -133,4 +133,4 @@ management:
       percentiles-histogram:
         http.server.requests: true
     tags:
-      application: hackaton
+      application: hackaton-keyframe-app
