--- a/k8s/config.yml
+++ b/k8s/config.yml
@@ -48,15 +48,19 @@ spec:
                 secretKeyRef:
                   name: hackaton-keyframe-secret
                   key: DATABASE_PASSWORD
-
             - name: MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE
               value: "health,info,metrics,prometheus"
             - name: MANAGEMENT_ENDPOINT_PROMETHEUS_ENABLED
               value: "true"
             - name: MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED
               value: "true"
+
             - name: MANAGEMENT_METRICS_DISTRIBUTION_PERCENTILES_HISTOGRAM_HTTP_SERVER_REQUESTS
+              value: "true"
+
+            - name: MANAGEMENT_METRICS_DISTRIBUTION_PERCENTILES_HTTP_SERVER_REQUESTS
               value: "0.95,0.99"
+
             - name: MANAGEMENT_METRICS_TAGS_APPLICATION
               value: "hackaton-keyframe-app"
 
