--- a/k8s/config-secret.yml
+++ b/k8s/config-secret.yml
@@ -6,6 +6,12 @@ data:
   DATABASE: "postgres"
   DATABASE_PORT: "5432"
   DATABASE_HOST: "hackaton-keyframe-db.cs34oe66a9rt.us-east-1.rds.amazonaws.com"
+  REDIS_HOST: "hackaton-redis.td3ldm.0001.use1.cache.amazonaws.com:6379"
+  EMAIL_USERNAME: "fiapxgrupo17hackaton@gmail.com"
+  EMAIL_PASSWORD: "fuzv lolj ymlt xtjb"
+  SERVER_PORT: "8080"
+  KAFKA_BOOTSTRAP_SERVERS: "b-1.hackatonkafka.n91c47.c24.kafka.us-east-1.amazonaws.com:9092"
+
 ---
 apiVersion: v1
 kind: Secret
