--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,7 +60,12 @@ spring:
     redis:
       time-to-live: 600000
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    admin:
+      fail-fast: false
+      properties:
+        request.timeout.ms: 30000
+        default.api.timeout.ms: 30000
+    bootstrap-servers: b-1.hackatonkafka.n91c47.c24.kafka.us-east-1.amazonaws.com:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -76,6 +81,7 @@ spring:
       enable-auto-commit: ${KAFKA_ENABLE_AUTO_COMMIT:true}
       properties:
         spring.json.trusted.packages: "tech.challenge.hackaton"
+        security.protocol: PLAINTEXT
 
 
 logging:
